refatored specifications and crrate specification docs
